--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ aside{
 display: block;
 border: none;
 background-color: var(--grey-800);
-color: white;
+color: var(--grey-300);
 padding: 10px;
 width: 100%;
 }
@@ -98,6 +98,7 @@ width: 100%;
 .search form input:hover,
 .search form input:focus{
   background-color: var(--grey-700);
+  outline-color: var(--grey-300);
 }
 
 /* chat section */
@@ -206,6 +207,7 @@ footer{
     padding: 15px;
     display: flex;
     align-items: center;
+
 }
 
 footer button{
@@ -260,13 +262,17 @@ footer form{
 footer form textarea{
   width: 100%;
   padding: 10px;
-  border: none;
   resize: none;
   border-radius: 20px;
   font-size: 16px;
   background-color: var(--grey-600);
   color: var(--grey-300); 
-  overflow: hidden;
+
+}
+
+
+footer form textarea:focus{
+ outline-color: var(--grey-200) ;
 }
 
 /* responsive */
